--- a/浏览器字体强制.css
+++ b/浏览器字体强制.css
@@ -2,32 +2,30 @@
 
 /*字体阴影*/
 * {
-	text-shadow: 0.0em 0.0em 0.13em #37F !important;
-	font-family: Optima, '华文黑体' !important;
-	background-color: rgba(0, 0, 0, 0);
-	-webkit-transition: all 0.4s ease;
-	font-weight: 300;
-	line-height: 1.625;
-	font-size: 16px !important;
+  text-shadow: 0em 0em 0.13em #37f !important;
+  font-family: Optima, "华文黑体" !important;
+  background-color: rgba(0, 0, 0, 0);
+  -webkit-transition: all 0.4s ease;
+  font-weight: 300;
+  line-height: 1.625;
+  font-size: 16px !important;
 }
 
 /*去除链接下划线*/
 a {
-	text-decoration: none !important
+  text-decoration: none !important;
 }
 
 /*淡蓝色文字效果*/
 a {
-	-webkit-transition: all 0.3s ease-out;
+  -webkit-transition: all 0.3s ease-out;
 }
 
 a:hover {
-	color: rgb(224, 7, 43)  !important;
-	text-shadow: -5px 3px 18px #39F !important;
-	-webkit-transition: all 0.3s ease-out;
+  color: rgb(224, 7, 43) !important;
+  text-shadow: -5px 3px 18px #39f !important;
+  -webkit-transition: all 0.3s ease-out;
 }
- 
-
 
 /* 2018.09更新.
 
